HFP-3348 Fix hover effect after animation

--- a/src/components/textItem/TextItem.scss
+++ b/src/components/textItem/TextItem.scss
@@ -32,7 +32,7 @@
     border-radius: 5px;
     border-color: styles.$border-color-neutral;
     box-shadow: 4px 4px 4px #cccccc8f;
-    background-color: styles.$h5p-question-background;
+    background: styles.$h5p-question-background;
 
     .text-item {
       background-color: styles.$text-item-background-neutral;
@@ -58,10 +58,10 @@
         cursor: pointer;
         &:not(:focus-within) {
           border-style: dotted;
-          border-color: styles.$text-item-border-color;
+          border-color: styles.$text-item-border-color !important;
 
           .text-item {
-            background-color: styles.$text-item-background-dark;
+            background: styles.$text-item-background-dark;
           }
         }
       }
