--- a/src/components/textItem/TextItem.scss
+++ b/src/components/textItem/TextItem.scss
@@ -156,7 +156,7 @@
   &:hover {
     &:not(.icon-move-to-category-expanded) {
       cursor: pointer;
-      background: styles.$text-item-background-dark;
+      background: #ffffff;
     }
   }
 
