HFP-3376 Fix assign item icon background color

--- a/src/components/category/Category.scss
+++ b/src/components/category/Category.scss
@@ -100,7 +100,7 @@
 
 .button-assign-items {
   border: none;
-  background-color: #ffffff;
+  background-color: inherit;
 
   &:hover:before {
     cursor: pointer;
