--- a/src/components/category/Category.scss
+++ b/src/components/category/Category.scss
@@ -96,7 +96,7 @@
       padding-left: 0em;
     }
 
-    &.category-dropzone:not(.expanded-state) {
+    &.category-dropzone {
       border: dotted 2px styles.$dropzone-border-color;
       border-radius: 5px;
       background-color: styles.$dropzone-background-neutral;
