--- a/src/components/commons/DropdownSelect.scss
+++ b/src/components/commons/DropdownSelect.scss
@@ -1,86 +1,88 @@
 @use '../../styles/' as styles;
 
-.dropdown-select {
-  position: absolute;
-  margin: 0;
-  box-sizing: border-box;
-  top: 50%;
-  right: 0;
-  max-height: 20em;
-  width: 100%;
-  background: #ffffff;
-  overflow-y: auto;
-  z-index: 2;
-
-  color: styles.$text-color;
-  filter: drop-shadow(0 0 0.75em styles.$border-color-neutral);
-  font-weight: normal;
-
-  -webkit-column-break-inside: avoid;
-  page-break-inside: avoid;
-  break-inside: avoid;
-  backface-visibility: hidden;
-
-  .label {
-    padding: 0.5em 0.5em 0.5em 1em;
-    font-weight: bold;
-    font-style: italic;
-    line-height: 2em;
-  }
-
-  hr {
-    color: #ffffff00;
-    border: 0;
-    border-top: 1px solid styles.$border-color-neutral;
-    margin: 1em 0;
-    padding: 0;
-    margin: 0em 0.5em 0.125em 0.5em;
-  }
-
-  ul {
+.h5p-text-grouping {
+  .dropdown-select {
+    position: absolute;
     margin: 0;
-    padding: 0;
-    padding-top: 0.5em;
-  }
+    box-sizing: border-box;
+    top: 50%;
+    right: 0;
+    max-height: 20em;
+    width: 100%;
+    background: #ffffff;
+    overflow-y: auto;
+    z-index: 2;
 
-  li {
-    display: flex;
-    align-items: center;
-    padding: 0.5em 1em;
-    position: relative;
-    line-height: 1.8em;
+    color: styles.$text-color;
+    filter: drop-shadow(0 0 0.75em styles.$border-color-neutral);
+    font-weight: normal;
 
-    &:hover {
-      &:not(.disabled) {
-        cursor: pointer;
-        background: styles.$text-item-background-neutral;
+    -webkit-column-break-inside: avoid;
+    page-break-inside: avoid;
+    break-inside: avoid;
+    backface-visibility: hidden;
+
+    .label {
+      padding: 0.5em 0.5em 0.5em 1em;
+      font-weight: bold;
+      font-style: italic;
+      line-height: 2em;
+    }
+
+    hr {
+      color: #ffffff00;
+      border: 0;
+      border-top: 1px solid styles.$border-color-neutral;
+      margin: 1em 0;
+      padding: 0;
+      margin: 0em 0.5em 0.125em 0.5em;
+    }
+
+    ul {
+      margin: 0;
+      padding: 0;
+      padding-top: 0.5em;
+    }
+
+    li {
+      display: flex;
+      align-items: center;
+      padding: 0.5em 1em;
+      position: relative;
+      line-height: 1.8em;
+
+      &:hover {
+        &:not(.disabled) {
+          cursor: pointer;
+          background: styles.$text-item-background-neutral;
+        }
       }
     }
-  }
 
-  .disabled {
-    color: styles.$disabled-text-color;
-  }
-
-  .selected {
-    &:before {
-      font-family: 'Material Icons';
-      font-size: 2em;
-      content: 'check_box';
-      padding-right: 0.5em;
+    .disabled {
+      color: styles.$disabled-text-color;
     }
-  }
 
-  .unselected {
-    &:before {
-      font-family: 'Material Icons';
-      font-size: 2em;
-      content: 'check_box_outline_blank';
-      padding-right: 0.5em;
+    .selected {
+      &:before {
+        font-family: 'Material Icons';
+        font-size: 2em;
+        content: 'check_box';
+        padding-right: 0.5em;
+      }
     }
-  }
 
-  .radioSelected {
-    background: styles.$text-item-background-neutral;
+    .unselected {
+      &:before {
+        font-family: 'Material Icons';
+        font-size: 2em;
+        content: 'check_box_outline_blank';
+        padding-right: 0.5em;
+      }
+    }
+
+    .radioSelected {
+      background: styles.$text-item-background-neutral;
+    }
   }
 }
