HFP-3345 Simplify code, rename variable

--- a/src/components/textItem/TextItem.scss
+++ b/src/components/textItem/TextItem.scss
@@ -29,6 +29,11 @@
       z-index: 1;
     }
 
+    &.dragged {
+      position: fixed; 
+      z-index: 1;
+    }
+
     .text-item-border {
       padding: 0.25em;
 
