--- a/src/components/category/Category.scss
+++ b/src/components/category/Category.scss
@@ -101,6 +101,7 @@
         border: dotted 2px styles.$dropzone-border-color;
         border-radius: 5px;
         background-color: styles.$dropzone-background-neutral;
+        z-index: 1; // Lift category up to show entire border
       }
     }
   }
