Add focus + hover effects on expand/collapse button

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -4,7 +4,6 @@ $h5p-question-background: #ffffff;
 $text-item-background-neutral: #f5f7ff;
 $text-item-background-dark: #deeafa;
 $text-item-border-color: #1a73d9;
-$color-collapse-expand-button: #121212;
 $disabled-text-color: #969696;
 
 $action-icon-color: #4174cc;
@@ -13,6 +12,9 @@ $action-icon-color-dark: #2f5596;
 
 $dropzone-background-neutral: #f0f3fa;
 $dropzone-border-color: #287ec9;
+
+$color-collapse-expand-button: #121212;
+$color-collapse-expand-button-hover: #4d4d4d;
 
 $color-correct-light: #edfff0;
 $color-correct-dark: #6ea776;
