--- a/src/components/category/Category.scss
+++ b/src/components/category/Category.scss
@@ -150,9 +150,18 @@
 
   .expand-collapse-button {
     display: none;
+    color: styles.$color-collapse-expand-button;
 
     &:hover {
       cursor: pointer;
+      color: styles.$color-collapse-expand-button-hover;
+    }
+
+    &:focus {
+      outline: none;
+      border-radius: 4px;
+      border-color: #ffffff00;
+      box-shadow: 0 0 4px 1px styles.$action-icon-color;
     }
   }
 
@@ -168,7 +177,6 @@
         font-family: 'Material Icons';
         font-size: 2em;
         content: '\e5c5';
-        color: styles.$color-collapse-expand-button;
       }
     }
 
@@ -178,7 +186,6 @@
         font-family: 'Material Icons';
         font-size: 2em;
         content: '\e5c5';
-        color: styles.$color-collapse-expand-button;
       }
     }
   }
