--- a/src/components/categoryList/CategoryList.scss
+++ b/src/components/categoryList/CategoryList.scss
@@ -6,6 +6,7 @@
     grid-gap: 1em;
     grid-template-columns: repeat(2, 1fr);
     margin-bottom: 1em;
+    position: relative; // Important for dropdown height calculations
 
     &.singleCategory {
       grid-template-columns: 1fr;
