--- a/src/components/textItem/TextItem.scss
+++ b/src/components/textItem/TextItem.scss
@@ -56,7 +56,7 @@
         color: styles.$text-color;
         font-family: Arial;
         font-size: 1em;
-        line-height: 3em;
+        min-height: 3em;
 
         .text-item-content {
           flex-grow: 1;
