Improve assign items while dropdown open solution
Now the click on an assign items button while a dropdown is open
makes the dropdown close, and then the new dropdown opens

--- a/src/components/category/Category.scss
+++ b/src/components/category/Category.scss
@@ -111,7 +111,7 @@
     outline: none;
     background-color: inherit;
 
-    &:hover:not(.disabled):before {
+    &:hover:before {
       cursor: pointer;
       color: styles.$action-icon-color-dark;
     }
