HFP-3387 Fix clicking lowest item opens menu upwards

--- a/src/components/commons/DropdownSelect.scss
+++ b/src/components/commons/DropdownSelect.scss
@@ -2,7 +2,7 @@
 
 .h5p-text-grouping {
   .dropdown-select {
-    position: absolute;
+    position: relative;
     margin: 0;
     box-sizing: border-box;
     top: 50%;
